--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,24 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "axios-rate-limit": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0",
     "pg": "^8.13.0",
     "sequelize": "^6.37.4",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^29.5.13",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
