--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "build": "tsc",
+    "test": "jest",
+    "migrate": "sequelize-cli db:migrate",
+    "seed": "sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +25,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.13.0",
     "sequelize": "^6.37.4",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
@@ -31,6 +37,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.5",
     "jest": "^29.7.0",
+    "sequelize-cli": "^6.6.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2"
   }
